fix: add missing padding to chip (#100)

--- a/src/components/Layout/styles/Chip.module.css
+++ b/src/components/Layout/styles/Chip.module.css
@@ -15,6 +15,7 @@
     user-select: none;
     width: fit-content;
     align-items: center;
+    padding-right: 2px;
 }
 
 .chipBase {
